# mapping_reads

./: CMakeLists.txt  README.md
include/: fm_index.hpp
scripts/: fastq_quality.py
src/: fastq_quality.cpp  main.cpp
